# VoiceAssistant

main/: package-lock.json  package.json  vite.config.js
main/src/: App.jsx
main/src-tauri/: Cargo.toml  tauri.conf.json
main/src-tauri/src/: main.rs  voiceinput.rs  voiceoutput.rs
src/: commands.rs  main.rs  math.rs  voiceinput.rs  voiceoutput.rs
