[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
vosk = "0.3.1"
cpal="0.15.3"
bindgen="0.70.1"
crossbeam-channel = "0.5.14"
once_cell = "1.20.2"
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = "1.0.135"
rodio = "0.20.1"
lazy_static = "1.5.0"
tokio = { version = "1.43.0", features = ["full"] }
